--- a/public/microservices/wrld3d/css/wrld3d.css
+++ b/public/microservices/wrld3d/css/wrld3d.css
@@ -22,15 +22,6 @@ html, body {
     left: 15px;
     top: 200px
 }
-/* #compass-container {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 72px
-} */
 #compass-container {
     position: absolute;
     right: 20px;
@@ -56,21 +47,6 @@ html, body {
     border-radius: 6px;
     border: 1px solid #ddd;
 }
-/* #searchbar-container .text-field-container {
-    background-color: #fff;
-    box-sizing: border-box;
-    height: 40px;
-    width: 300px;
-    border: none;
-    padding: 5px 10px;
-}
-#searchbar-container .text-field-container input.text-field {
-    width: 230px;
-    outline: none;
-    margin-left: 10px;
-    background-color: transparent;
-    border-style: none;
-} */
 #searchbar-container .header-container .header-text {
     display: none;
 }
@@ -82,12 +58,12 @@ html, body {
     width: 70%;
     box-shadow: 0 6px 12px rgb(0 0 0 / 18%);
     border-color: #ddd;
-    /* margin-bottom: 20px; */
+    padding-bottom: 10px;
     margin-left: 15px;
+    margin-bottom: 10px;
     background-color: #fff;
     border: 1px solid transparent;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
+    border-radius: 7px;
     font-family: 'Source Sans Pro',sans-serif;
 }
 h4.divToggle, h5.divToggle {
@@ -97,62 +73,79 @@ h4.divToggle, h5.divToggle {
     padding: 5px 5px 5px 15px;
     position: relative;
     font-size: 18px;
+    color: rgba(0,0,0,.67);
 }
-h4.divToggle button.export {
-    width: 140px;
+button.export {
+    width: 40px;
     position: absolute;
     right: 50px;
     top: 4px;
+    border: none;
+    background-color: transparent;
 }
-.btn-info {
-    background-color: #00c0ef;
-    border-color: #00acd6;
-    color: #fff;
-    border: 1px solid transparent;
+button.export svg {
+    height: 24px;
 }
-.btn-xs, .btn-group-xs > .btn {
-    padding: 1px 5px;
+button .kiwi {
+    fill: #689f38;
+}
+button.export, .paginationDiv button {
+    filter: alpha(opacity=60);
+    opacity: .6;
+}
+button.export:hover, .paginationDiv button:hover {
+    cursor: pointer;
+    filter: alpha(opacity=100);
+    opacity: 1.0;
+}
+.paginationDiv {
+    position: absolute;
+    right: 10px;
+    bottom: 12px;
+}
+.paginationDiv button {
+    width: 40px;
+    border: none;
+    background-color: transparent;
+}
+.paginationDiv button svg {
+    height: 16px;
+}
+.paginationDiv .text {
+    display: inline-block;
     font-size: 12px;
-    line-height: 1.5;
-    border-radius: 3px;
-}
-.btn-info:hover, .btn-info:active, .btn-info.hover {
-    background-color: #00acd6;
-}
-.btn-info:hover {
-    color: #fff;
-    border-color: #269abc;
-}
-.btn:hover, .btn:focus, .btn.focus {
-    text-decoration: none;
-}
-.btn-info.btn-xs img {
-    height: 13px;
-    opacity: 0.5;
-    color: #fff;
-    margin-right: 6px;
     position: relative;
-    top: 2px;
+    bottom: 3px;
 }
-.btn-info.btn-xs svg {
-    color: #fff;
+#alertsDiv .wrapper {
+    background-color: #f5f5f5;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 7px;
+    padding-bottom: 27px;
+    border: solid 1px #eee;
 }
 #alertsDiv .colHeader {
     font-weight: bold;
     font-size: 14px;
+    color: rgba(0,0,0,.67);
     border-bottom: 2px solid #ddd;
     vertical-align: bottom;
-    padding: 8px 10px 8px 20px;
+    padding: 8px 10px 8px 10px;
 }
 #alertsDiv .alertRow {
     cursor: pointer;
-    padding: 10px 10px 10px 20px;
+    font-size: 14px;
+    padding: 10px 10px 10px 10px;
     border-bottom: solid 1px #eee;
     color: #333;
     font-weight: 400;
 }
-#alertsDiv .alertRow:hover {
-    background-color: #f5f5f5;
+#alertsDiv .alertRow.even {
+    background-color: #fff;
+}
+#alertsDiv .alertRow:hover, #alertsDiv .alertRow.even:hover {
+    background-color: #eee;
 }
 #alertsDiv .col1 {
     display: inline-block;
@@ -288,33 +281,3 @@ button.close {
 .badge.bg-red {
     background-color: #dd4b39 !important;
 }
-/* .tilt-button-container {
-    position: absolute;
-    right: calc(32px * 2 + 10px * 3);
-    top: 10px;
-    transition: right 500ms;
-    box-shadow: 0 2px 4px 2px var(--box-shadow-color);
-    z-index: 100;
-    width: 32px;
-    height: 32px;
-}
-.tilt-button-container .tilt-button {
-    width: 32px;
-    height: 32px;
-    font-family: "Open Sans", sans-serif;
-    font-size: 13pt;
-    color: #1756a9;
-    font-weight: 600;
-} */
-/* .ripple-button {
-    background-color: var(--widgets-main-theme-button-other-color);
-    background-position: center;
-    background-repeat: no-repeat;
-    border: 0;
-    box-sizing: border-box;
-    cursor: pointer;
-    outline: none;
-    overflow: hidden;
-    padding: 0;
-    position: relative;
-} */
