--- a/public/microservices/wrld3d/css/wrld3d.css
+++ b/public/microservices/wrld3d/css/wrld3d.css
@@ -1,13 +1,13 @@
-@import url("/ui/vendors/fonts.googleapis.com/css/cssfamilyPoppins.css");
+@import url('/ui/vendors/fonts.googleapis.com/css/cssfamilyPoppins.css');
 @font-face { 
-    font-family: "Sakkal"; 
+    font-family: 'Sakkal'; 
     font-style: normal; 
     font-weight: normal; 
     src: url('/microservices/wrld3d/fonts/SakkalMajallaBold.eot'); 
-    src: url('/microservices/wrld3d/fonts/SakkalMajallaBold-iefix.eot') format("embedded-opentype"),
-    url('/microservices/wrld3d/fonts/SakkalMajallaBold.woff') format("woff"),
-    url('/microservices/wrld3d/fonts/SakkalMajallaBold.ttf') format("truetype"),
-    url('/microservices/wrld3d/fonts/SakkalMajallaBold.svg') format("svg")
+    src: url('/microservices/wrld3d/fonts/SakkalMajallaBold-iefix.eot') format('embedded-opentype'),
+    url('/microservices/wrld3d/fonts/SakkalMajallaBold.woff') format('woff'),
+    url('/microservices/wrld3d/fonts/SakkalMajallaBold.ttf') format('truetype'),
+    url('/microservices/wrld3d/fonts/SakkalMajallaBold.svg') format('svg')
 }
 
 html, body {
@@ -16,14 +16,14 @@ html, body {
     padding: 0;
 }
 .poi-view-content .poi-view-header .title-text {
-    font: 22px "Poppins",Arial,"Droid Sans",sans-serif;
+    font: 22px 'Poppins',Arial,'Droid Sans',sans-serif;
     color: #000;
     /* position: relative;
     top: 4px; */
     padding-left: 40px;
 }
 .poi-view-content .poi-view-header .close-button:before {
-    content: "\00D7";
+    content: '\00D7';
 }
 .poi-view-content .poi-view-html-container {
     border-top-color: #ccc;
@@ -259,13 +259,17 @@ button.close {
 }
 .logo-wrap {
     position: absolute;
-    top:20px; right:20px;
-    z-index: 20;
-    background-color: rgba(249, 242, 231, 0.8);
+    top: 12px;
+    right: 12px;
+    /* z-index: 20; */
+    /* background-color: rgba(249, 242, 231, 0.8); */
+    background-color: #fff;
+    opacity: 0.9;
     padding: 5px 2px 0px 3px;
     width: 10vw;
     height: 10vw;
     /* border-radius: 50%; */
+    border-radius: 4px;
 }
 .logo-image {
     /* background: url(/microservices/wrld3d/img/PIF-logo.svg) no-repeat; */
@@ -296,7 +300,7 @@ button.close {
     border-radius: 5px;
 }
 .tilt-button {
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 13pt;
     font-weight: 600;
 }
@@ -306,9 +310,11 @@ button.close {
     left: 440px;
     height: 40px;
     width: 820px;
-    z-index: 40;
+    z-index: 10;
+    opacity: 0.9;
 }
 .action-buttons .alertButton {
+    vertical-align: top;
     height: 44px;
     width: auto;
     border: none;
@@ -359,3 +365,45 @@ button.close {
     width: 634px !important;
     /* was 334 */
 }
+.aqiButton, .comfortButton, .powerButton {
+    vertical-align: top;
+    border: none;
+    border-radius: 4px;
+    background-color: #fff;
+    margin-left: 10px;
+    cursor: pointer;
+    position: relative;
+}
+.comfortTemperature {
+    position: absolute;
+    top: 7px;
+    left: 7px;
+    font-size: 12px;
+    opacity: 0.6;
+}
+.comfortHumidity {
+    position: absolute;
+    top: 7px;
+    right: 7px;
+    font-size: 12px;
+    opacity: 0.6;
+}
+.aqiTitle, .comfortTitle, .powerTitle {
+    position: absolute;
+    top: 105px;
+    /* left: 68px; */
+    /* top: 7px; */
+    left: 7px;
+    opacity: 0.6;
+}
+.action-buttons .aqiButton:hover, .action-buttons .comfortButton:hover {
+    background-color: #f4f4f4;
+}
+#aqiGauge, #comfortGauge, #powerGauge {
+    width: 130px;
+    height: 121px;
+}
+#aqiGauge .amcharts-export-menu, #comfortGauge .amcharts-export-menu, #powerGauge .amcharts-export-menu {
+    display: none;
+}
+
