--- a/public/microservices/wrld3d/css/wrld3d.css
+++ b/public/microservices/wrld3d/css/wrld3d.css
@@ -52,7 +52,7 @@ html, body {
 #indoor-container {
     position: absolute;
     left: 15px;
-    top: 200px
+    top: 120px
 }
 #compass-container {
     position: absolute;
@@ -68,7 +68,7 @@ html, body {
     top: 12px;
 }
 #eegeo-searchbar {
-    border-radius: 4px;
+    border-radius: 6px;
     box-shadow: none;
 }
 .eegeo-indoor-control #eegeo-exit-interior-button-container button {
@@ -80,6 +80,16 @@ html, body {
 }
 #eegeo-results-container .search-results-group .search-result-elements-container .search-result-row .details .tags {
     display: none;
+}
+.eegeo-searchbar-menu-container, .eegeo-searchbar-menu-container .menu-body-container,
+#eegeo-results-container .search-results-group, #eegeo-results-container .search-results-group .search-result-elements-container {
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
+.eegeo-searchbar-menu-container, .eegeo-searchbar-container .disabled-overlay,
+#eegeo-results-container .search-results-group, #eegeo-results-container .search-results-group .search-result-elements-container {
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
 }
 #searchbar-container .text-field-container {
     border-radius: 6px;
@@ -364,6 +374,10 @@ button.close {
 .leaflet-pane.leaflet-popup-pane.wide .poi-view-content {
     width: 634px !important;
     /* was 334 */
+}
+.leaflet-pane .leaflet-popup-content-wrapper {
+    border-radius: 6px !important;
+    cursor: default;
 }
 .aqiButton, .comfortButton, .powerButton {
     vertical-align: top;
