--- a/public/microservices/wrld3d/css/wrld3d.css
+++ b/public/microservices/wrld3d/css/wrld3d.css
@@ -279,11 +279,11 @@ button.close {
     /* background-color: rgba(249, 242, 231, 0.8); */
     background-color: #fff;
     opacity: 0.9;
-    padding: 5px 2px 0px 3px;
+    /* padding: 5px 2px 0px 3px; */
     width: 10vw;
     height: 10vw;
-    max-width: 121px;
-    max-height: 121px;
+    max-width: 123px;
+    max-height: 123px;
     /* border-radius: 50%; */
     border-radius: 4px;
 }
@@ -386,7 +386,7 @@ button.close {
     border-radius: 6px !important;
     cursor: default;
 }
-.aqiButton, .comfortButton, .powerButton {
+.aqiButton, .comfortButton, .powerButton, .assetButton {
     vertical-align: top;
     border: none;
     border-radius: 4px;
@@ -410,7 +410,7 @@ button.close {
     font-size: 12px;
     opacity: 0.6;
 }
-.aqiTitle, .comfortTitle, .powerTitle {
+.aqiTitle, .comfortTitle, .powerTitle, .assetTitle {
     position: absolute;
     top: 105px;
     /* left: 68px; */
@@ -421,7 +421,7 @@ button.close {
 .action-buttons .aqiButton:hover, .action-buttons .comfortButton:hover {
     background-color: #f4f4f4;
 }
-#aqiGauge, #comfortGauge, #powerGauge {
+#aqiGauge, #comfortGauge, #powerGauge, #assetGauge {
     width: 130px;
     height: 121px;
 }
