Hide scrollbars on map

--- a/public/microservices/wrld3d/css/wrld3d.css
+++ b/public/microservices/wrld3d/css/wrld3d.css
@@ -48,6 +48,7 @@ html, body {
 #pageDiv {
     position: relative;
     height: 100%;
+    overflow: hidden;
 }
 #indoor-container {
     position: absolute;
