--- a/public/microservices/wrld3d/css/hayyak.css
+++ b/public/microservices/wrld3d/css/hayyak.css
@@ -14,6 +14,23 @@
 .meeting-room-details {
     margin-top: 8px;
 }
+.meeting-room-details .status span.online {
+    color: #0bff00;
+}
+.meeting-room-details .status span.offline {
+    color: red;
+}
+.status-icon {
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 0px;
+    width: 20px;
+    height: 20px;
+}
+.meeting-room-details .status {
+    display: inline-block;
+    vertical-align: top;
+}
 .phone-icon, .address-icon {
     display: inline-block;
     vertical-align: top;
