--- a/public/microservices/wrld3d/css/wrld3d.css
+++ b/public/microservices/wrld3d/css/wrld3d.css
@@ -108,7 +108,7 @@ html, body {
     bottom:0; left:0;
     z-index: 701;
     display: none;
-    width: 70%;
+    width: 80%;
     box-shadow: 0 6px 12px rgb(0 0 0 / 18%);
     border-color: #ddd;
     padding-bottom: 10px;
@@ -229,22 +229,27 @@ button.open:hover, button.dismiss:hover, button.export:hover, .paginationDiv but
 }
 #alertsDiv .col1 {
     display: inline-block;
-    width: 17%;
+    width: 15%;
     /* vertical-align: super; */
 }
 #alertsDiv .col2 {
     display: inline-block;
-    width: 23%;
+    width: 15%;
     /* vertical-align: super; */
 }
 #alertsDiv .col3 {
     display: inline-block;
-    width: 40%;
+    width: 20%;
     /* vertical-align: super; */
 }
 #alertsDiv .col4 {
     display: inline-block;
-    width: 20%;
+    width: 40%;
+    /* vertical-align: super; */
+}
+#alertsDiv .col5 {
+    display: inline-block;
+    width: 10%;
     /* vertical-align: super; */
 }
 .modal-header .close {
